--- a/.github/workflows/deploy_master.yml
+++ b/.github/workflows/deploy_master.yml
@@ -104,11 +104,10 @@ jobs:
           image: dangeroustech/streamdl:${{ matrix.component }}_stable
           args: >-
             --severity-threshold=critical
-            --file=Dockerfile.${{ matrix.component }}
             --exclude-base-image-vulns
             --policy-path=.snyk
-            --prune-repeated-subdependencies
-            --package-manager=dockerfile
+            --app-vulns
+            --exclude=/usr/local/go/**
 
       - name: Upload result to GitHub Code Scanning
         uses: github/codeql-action/upload-sarif@v3
