--- a/.github/workflows/deploy_staging.yml
+++ b/.github/workflows/deploy_staging.yml
@@ -54,11 +54,10 @@ jobs:
           image: streamdl:${{ matrix.component }}_local
           args: >-
             --severity-threshold=critical
-            --file=Dockerfile.${{ matrix.component }}
             --exclude-base-image-vulns
             --policy-path=.snyk
-            --prune-repeated-subdependencies
-            --package-manager=dockerfile
+            --app-vulns
+            --exclude=/usr/local/go/**
 
       - name: Upload result to GitHub Code Scanning
         id: snyk_results_upload
